Un Share Boards

--- a/tack/Templates/ManageEmail.html
+++ b/tack/Templates/ManageEmail.html
@@ -48,7 +48,7 @@
                 <div id="createboard" class="ui form segment" >
                     <form action="/savesubscriptions" method="post">
                         {% for subsc in subscriptions %}
-                            <div class="ui large label">Subscribe to email notifications when someone:</div><br><br>
+                            <h3 class="ui header">Subscribe to email notifications when someone:</h3>
                             <div class="ui large label" for="myonoffswitch1"> Follows you
                                 <div class="onoffswitch">
                                     <input type="hidden" name="onoffswitch1" value="off">
