--- a/tack/Templates/ShareBoard.html
+++ b/tack/Templates/ShareBoard.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="ui large label">{% if  sharedWith == "none" %}The board is not shared with anyone
-                {% else %} Currently shared with: </div><br>
+                {% else %} This board is currently shared with: </div><br>
                     {% for userName in sharedWith %}
                         <div class="ui label">{{ userName }}
                         <a style="text-decoration: none" class="item"
