--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -26,6 +26,24 @@
     });
 }
 
+        function searchBoardOpen() {
+    var search = $('#txtBoardSearch').val()
+    var data = {
+        search: search
+    };
+    $.ajax({
+        url: '/autoBoardComplete',
+        data: data,
+        type: "POST",
+        success: function(data) {
+            var returned_html = $(data);
+            $( "#txtBoardSearch" ).autocomplete ({
+        source: data
+    });
+        }
+    });
+}
+
         function searchResult(data) {
         alert("Here");
     $( "#txtSearch" ).autocomplete ({
@@ -72,10 +90,26 @@
             <div id="wrapper">
                 <div id="searchUsers" class="ui form segment" >
                     <form action="/searchUsers" method="post" enctype="multipart/form-data">
-                        <div>
+                        <div style="display:inline;">
                             <div class="ui label">Search Users:</div>
 
                             <input type="text" name="search" id="txtSearch" style="width:250px;" onkeyup="searchOpen()" />
+                            </br>
+                            <input class="ui button blue" type="submit" name="submit" value="Search">
+
+                        </div>
+
+
+                    </form>
+
+                </div>
+
+                <div id="searchBoards" class="ui form segment" >
+                    <form action="/searchBoards" method="post" enctype="multipart/form-data">
+                        <div style="display:inline;">
+                            <div class="ui label">Search Boards:</div>
+
+                            <input type="text" name="search" id="txtBoardSearch" style="width:250px;" onkeyup="searchBoardOpen()" />
                             </br>
                             <input class="ui button blue" type="submit" name="submit" value="Search">
 
