Edit board privacy and UI changes

--- a/tack/Templates/DisplaySearchBoard.html
+++ b/tack/Templates/DisplaySearchBoard.html
@@ -20,20 +20,12 @@
 </head>
 <body>
 <div class="ui inverted tiered menu">
-    <div class="right menu">
+        <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
-        <div class="item">
-            <a class="item" href="/">
-                <i class="edit icon"></i> Edit Board
-            </a>
-        </div>
-        <div class="item">
-            <a class="item" href="/shareBoard?boardName={{ boardName }}">
-                <i class="share icon"></i> Share Board
-            </a>
-        </div>
+    </div>
+    <div class="right menu">
         <div class="item">
             <a class="item" href="/">
                 <i class="home icon"></i> Home
@@ -45,7 +37,6 @@
                 <a class="item" href="/createtack">Create Tack</a>
                 <a class="item" href="/createboard">Create Board</a>
                 <a class="item" href="/newurltack">Create Tack from Url</a>
-
             </div>
         </div>
         <div class="ui simple dropdown item">
