--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -20,20 +20,13 @@
 </head>
 <body>
 <div class="ui inverted tiered menu">
-    <div class="right menu">
+    <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
-        <div class="item">
-            <a class="item" href="/">
-                <i class="edit icon"></i> Edit Board
-            </a>
-        </div>
-        <div class="item">
-            <a class="item" href="/shareBoard?boardName={{ boardName }}">
-                <i class="share icon"></i> Share Board
-            </a>
-        </div>
+    </div>
+    <div class="right menu">
+
         <div class="item">
             <a class="item" href="/">
                 <i class="home icon"></i> Home
@@ -42,8 +35,8 @@
         <div class="ui simple dropdown item">
             <i class="bookmark icon"></i>Actions<i class="dropdown icon"></i>
             <div class="menu">
-                <a class="item" href="/createtack">Create Tack</a>
-                <a class="item" href="/createboard">Create Board</a>
+               <a class="item" href="/editBoardPrivacy?boardName={{ boardName }}"><i class="edit icon"></i> Edit Board</a>
+                <a class="item" href="/shareBoard?boardName={{ boardName }}"><i class="share icon"></i> Share Board</a>
                 <a class="item" href="/newurltack">Create Tack from Url</a>
 
             </div>
@@ -61,14 +54,14 @@
 </div>
 <section class="container">
     <div id="wrapper">
-        <div class="ui label">{% if  sharedWith == "none" %}The board is not shared with anyone
-        {% else %} This board is currently shared with: <br>
-            {% for userName in sharedWith %}
-                <div class="ui label">{{ userName }}
-                </div></div><br>
-            {% endfor %}{% endif %}
-    </div><br>
-    <div class="ui label">{% if  tacks == "" %}There are no tacks in this board! Add a tack! {% endif %}</div>
+{#        <div class="ui label">{% if  sharedWith == "none" %}The board is not shared with anyone#}
+{#        {% else %} This board is currently shared with: <br>#}
+{#            {% for userName in sharedWith %}#}
+{#                <div class="ui label">{{ userName }}#}
+{#                </div></div><br>#}
+{#            {% endfor %}{% endif %}#}
+{#    </div><br>#}
+    {% if  tacks == "" %}<div class="ui label">There are no tacks in this board! Add a tack!</div> {% endif %}
     <div class = "ui five column grid">
         <div class="column">
             <div class="ui segment">
@@ -80,11 +73,32 @@
                 </a>
             </div>
         </div>
+            <div class="column">
+            <div class="ui segment">
+            <a href="/displayVideoTack"  rel="shadowbox" class="rounded ui image" >
+                <video width="200" height="200" controls>
+                    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
+                    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
+                    <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </a>
+            </div>
+        </div>
         {% for tack in tacks %}
             <div class="column">
                 <div class="ui segment">
                     <a href="/displayTack?tackName={{ tack.Filename }}"  rel="shadowbox" class="rounded ui image" title={{ tack.Filename }}>
+{#                        {% if tack.image == "r'^.jpg" %}#}
                         <img src="{{ MEDIA_URL }}{{ tack.image }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}>
+{#                        {% else %}#}
+{#                            <video width="200" height="200" controls>#}
+{#                    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">#}
+{#                    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">#}
+{#                    <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">#}
+{#                    Your browser does not support the video tag.#}
+{#                </video>#}
+{#                        {% endif %}#}
                     </a>
                 </div>
             </div>
