--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -102,10 +102,12 @@
 </head>
 <body>
 <div class="ui inverted tiered menu">
-    <div class="right menu">
+        <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
+    </div>
+    <div class="right menu">
         <div class="item">
             <a class="item" href="/">
                 <i class="home icon"></i> Home
@@ -150,13 +152,13 @@
                         <div class="field">
                             <label for="tack_url">URL:</label>
                             <div class="input">
-                                <input type="url" name="tack_url" placeholder="URL to tack"></br>
+                                <input type="url" name="tack_url" placeholder="URL to be added as bookmark"></br>
                             </div>
                         </div>
                         <div class="field">
                             <label for="tags">Tags:</label>
                             <div class="input">
-                                <input type="text" name="tags" placeholder="Tags Separated by commas"></br>
+                                <input type="text" name="tags" placeholder="Tags separated by commas"></br>
                             </div>
                         </div>
                         <div class="field">
