--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -24,13 +24,13 @@
                     </a>
                     <img class="ui large image" src="{{ MEDIA_URL }}{{ tack.image }}"  alt='No Image' title={{ tack.Filename }}>
                 </div>
-                {#                <img class="ui large image" src="{{ MEDIA_URL }}{{ tack.image }}"  alt='No Image' title={{ tack.Filename }}>#}
                 <div class="ui top left attached blue label">{{ tack.Filename }}</div>
-                <br><div class="ui label">
-                <a href="{{ tack.bookmark }}" target="_blank" class="detail"><i class="url icon"></i>{{ tack.bookmark }}</a>
-            </div><br>
-                <div class="ui label">
-                    Tagged as: {{ tack.tags }}
+
+                <div class="item">
+                <i class="url icon"></i><a href="{{ tack.bookmark }}" style="text-decoration: none" target="_blank" class="detail">{{ tack.bookmark }}</a>
+            </div>
+                <div class="item">
+                     <i class="tags icon"></i>Tagged as: {{ tack.tags }}
                 </div>
                 <div class="item">
                     <a class="item" href="#" id="edit_tack_link">
