--- a/tack/Templates/EditBoardPrivacy.html
+++ b/tack/Templates/EditBoardPrivacy.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Edit Board Privacy</title>
     <meta charset="UTF-8" />
 
     <script type="text/javascript" src="/static/jquery-1.6.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css" />
     <script type="text/javascript" src="/static/css/semantic/semantic.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
 
-
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>Create Board</title>
+
 </head>
 <body>
 <div class="ui inverted tiered menu">
-        <div class="left menu">
+    <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
@@ -49,38 +50,29 @@
     <section>
         <div id="container_demo">
             <div id="wrapper">
-                <div id="createboard" class="ui form segment" >
-                    <form action="/showdashboard" method="post" enctype="multipart/form-data">
-                        <div class="field">
-                            <label for="board_name">Name:</label>
-                            <div class="input">
-                                <input type="text" name="board_name" placeholder="Name for your Board">
-                            </div>
-                        </div>
-                        <div class="field">
-                            <label for="board_desc">Description:</label>
-                            <div class="input">
-                                <input type="text" name="board_desc" placeholder="Description for your Board">
-                            </div>
-                        </div>
+                <div id="updateBoard" class="ui form segment" >
+                    <form action="/changeBoardPrivacy" method="post" enctype="multipart/form-data">
+{#                        {{ board.Name }}#}
                         <div class="field">
                             <label for="board_privacy">Board Visibility:</label><br>
                             <div class="grouped inline fields">
                                 <div class="field">
                                     <div class="ui radio checkbox">
-                                        <input id="private" type="radio" name="board_privacy" checked="" value="Private">
+                                        <input id="private" type="radio" name="board_privacy" value="Private" {% if board.Privacy == 'Private' %} checked {% endif %}>
                                         <label for="private">Private</label>
                                     </div>
                                 </div>
                                 <div class="field">
                                     <div class="ui radio checkbox">
-                                        <input id="public" type="radio" name="board_privacy" value="Public">
+                                        <input id="public" type="radio" name="board_privacy" value="Public" {% if board.Privacy == 'Public' %} checked {% endif %} >
                                         <label for="public">Public</label>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <input class="ui button blue" type="submit" name="submit" value="Create!">
+
+                        <input type="hidden" name="boardName" value="{{ board.Name }}">
+                        <input class="ui button blue" type="submit" name="submit" value="Update">
                     </form>
                 </div>
             </div>
