--- a/tack/Templates/ManageEmail.html
+++ b/tack/Templates/ManageEmail.html
@@ -14,10 +14,12 @@
 </head>
 <body>
 <div class="ui inverted tiered menu">
-    <div class="right menu">
+        <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
+    </div>
+    <div class="right menu">
         <div class="item">
             <a class="item" href="/">
                 <i class="home icon"></i> Home
