--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -86,20 +86,28 @@
             </div>
         </div>
         {% for tack in tacks %}
+
             <div class="column">
                 <div class="ui segment">
+
                     <a href="/displayTack?tackName={{ tack.Filename }}"  rel="shadowbox" class="rounded ui image" title={{ tack.Filename }}>
 {#                        {% if tack.image == "r'^.jpg" %}#}
-                        <img src="{{ MEDIA_URL }}{{ tack.image }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}>
-{#                        {% else %}#}
-{#                            <video width="200" height="200" controls>#}
-{#                    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">#}
-{#                    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">#}
-{#                    <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">#}
-{#                    Your browser does not support the video tag.#}
-{#                </video>#}
-{#                        {% endif %}#}
+
+
+                            <img src="{{ MEDIA_URL }}{{ tack.image }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
+                        {% if tack.isFavorite %}
+                            <a class="ui right blue corner label item" style="text-decoration:none;">
+                                <i class="star icon"></i>
+                            </a>
+                            {% endif %}
+
+
+
+
+
+
                     </a>
+
                 </div>
             </div>
         {% endfor %}
