--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -111,7 +111,7 @@
         <form action="/searchUsers" method="post" enctype="multipart/form-data">
             <div style="display:inline;">
                 <div class="ui label">Search Users:</div>
-                <input type="text" name="search" id="txtSearch" style="width:250px;" onkeyup="searchOpen()" />
+                <input type="text" autocomplete="off" name="search" id="txtSearch" style="width:250px;" onkeyup="searchOpen()" />
                 </br>
                 <input class="ui button blue" type="submit" name="submit" value="Search">
             </div>
@@ -122,7 +122,7 @@
         <form action="/searchBoards" method="post" enctype="multipart/form-data">
             <div style="display:inline;">
                 <div class="ui label">Search Boards:</div>
-                <input type="text" name="search" id="txtBoardSearch" style="width:250px;" onkeyup="searchBoardOpen()" />
+                <input type="text" autocomplete="off" name="search" id="txtBoardSearch" style="width:250px;" onkeyup="searchBoardOpen()" />
                 </br>
                 <input class="ui button blue" type="submit" name="submit" value="Search">
             </div>
