--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -10,7 +10,17 @@
     <link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/animate-custom.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+
+    <script>
+    $(document).ready(function(){
+    $("a").click(function(){
+    alert("The icon was clicked.");
+    });
+    });
+
+   </script>
 </head>
 <body>
 <div class="container">
@@ -18,11 +28,18 @@
         <div id="container_demo">
             <div id="wrapper">
                 <div class="ui left floated medium image">
-                    <a class="ui right red corner label" style="text-decoration:none;">
-                        {# add href #}
-                        <i class="star icon"></i>
+                {% if tack.isFavorite %}
+                    <a class="ui right blue corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
+                    <i class="star icon"></i>
                     </a>
                     <img class="ui large image" src="{{ MEDIA_URL }}{{ tack.image }}"  alt='No Image' title={{ tack.Filename }}>
+                {% else %}
+                     <a class="ui right red corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
+                    <i class="star icon"></i>
+                    </a>
+                    <img class="ui large image" src="{{ MEDIA_URL }}{{ tack.image }}"  alt='No Image' title={{ tack.Filename }}>
+                {% endif %}
+
                 </div>
                 <div class="ui top left attached blue label">{{ tack.Filename }}</div>
 
@@ -61,6 +78,23 @@
             height: auto;
         }
 
+        #confirm_fav_form{
+            position: absolute;
+            border: 5px solid gray;
+            font-family: Cambria, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+            font-weight: 400;
+            font-size: 15px;
+            color: #1d3c41;
+            overflow-y: scroll;
+            border-radius: 5px;
+            padding: 10px;
+            background: white;
+            width: 400px;
+            height: auto;
+        }
+
+
+
     </style>
 
 
@@ -76,6 +110,17 @@
             $("#close").click(function(){
                 $("#tackform").fadeOut(500);
             });
+
+            $("#confirm_fav").click(function(){
+               $("#confirm_fav_form").fadeIn(1000);
+                favPopUp();
+            });
+
+
+
+            $("#closePopUp").click(function(){
+                $("#confirm_fav_form").fadeOut(500);
+            });
         });
 
         //position the popup at the center of the page
@@ -90,10 +135,41 @@
             });
         }
 
+        function favPopUp(){
+            if(!$("#confirm_fav_form").is(':visible')){
+                return;
+            }
+            $("#confirm_fav_form").css({
+                left: ($(window).width() - $('#confirm_fav_form').width()) / 2,
+                top: ($(window).width() - $('#confirm_fav_form').width()) / 7,
+                position:'absolute'
+            });
+        }
+
         //maintain the popup at center of the page when browser resized
         $(window).bind('resize',positionPopup);
 
+
+
     </script>
+                <form class="ui form segment"
+                      name="confirm_fav_form"
+                      id="confirm_fav_form"
+                      method="post" style="display:none"
+                      action="/ConfirmFav?tackName={{ tack.Filename }}&boardName={{ board.Name }}"
+                      enctype="multipart/form-data" >
+                      <div>
+                      <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
+                      </div>
+
+                      <div>
+                      <input class="ui button blue" type="submit" id="saveAsFav" value="Save">
+
+                      <a href="#" id="closePopUp">Close</a>
+                      </div>
+
+                </form>
+
 
 
                 <form class="ui form segment"
@@ -120,7 +196,7 @@
                                         <div class="field">
                                             <label for="tack_url">URL:</label>
                                             <div class="input">
-                                                <input type="url" name="tack_url" placeholder="URL to tack" value="{{ tack.bookmar }}"/>
+                                                <input type="url" name="tack_url" placeholder="URL to tack" value="{{ tack.bookmark }}"/>
                                                 </br>
                                             </div>
                                         </div>
