--- a/tack/Templates/BoardsHome.html
+++ b/tack/Templates/BoardsHome.html
@@ -38,6 +38,7 @@
                <a class="item" href="/editBoardPrivacy?boardName={{ boardName }}"><i class="edit icon"></i> Edit Board</a>
                 <a class="item" href="/shareBoard?boardName={{ boardName }}"><i class="share icon"></i> Share Board</a>
                 <a class="item" href="/newurltack">Create Tack from Url</a>
+                <a class="item" href="/viewFavorites"><i class="star icon"></i>View Favorites</a>
 
             </div>
         </div>
