--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -163,7 +163,7 @@
                       </div>
 
                       <div>
-                      <input class="ui button blue" type="submit" id="saveAsFav" value="Save">
+                      <input class="ui button blue" type="submit" id="saveAsFav" value="Confirm">
 
                       <a href="#" id="closePopUp">Close</a>
                       </div>
