--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -86,6 +86,7 @@
                 <a class="item" href="/createtack">Create Tack</a>
                 <a class="item" href="/createboard">Create Board</a>
                 <a class="item" href="/newurltack">Create Tack from Url</a>
+                <a class="item" href="/viewFavorites"><i class="star icon"></i>View Favorites</a>
             </div>
         </div>
         <div class="ui simple dropdown item">
