--- a/tack/Templates/CreateTack.html
+++ b/tack/Templates/CreateTack.html
@@ -144,9 +144,9 @@
                             </div>
                         </div>
                         <div class="field">
-                            <label for="file">Image:</label>
+                            <label for="file">Image/Video:</label>
                             <div class="input">
-                                <input type="file" name="file" id="file" required="required" accept="image/*"><br>
+                                <input type="file" name="file" id="file" required="required"><br>
                             </div>
                         </div>
                         <div class="field">
