--- a/tack/Templates/DisplaySearchBoard.html
+++ b/tack/Templates/DisplaySearchBoard.html
@@ -63,7 +63,7 @@
             <div class="column">
                 <div class="ui segment">
                     <a href="/displayTack?tackName={{ tack.Filename }}"  rel="shadowbox" class="rounded ui image" title={{ tack.Filename }}>
-                        <img src="{{ MEDIA_URL }}{{ tack.image }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}>
+                        <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}>
                     </a>
                 </div>
             </div>
