--- a/tack/Templates/VideoTest.html
+++ b/tack/Templates/VideoTest.html
@@ -5,14 +5,21 @@
     <title></title>
 </head>
 <body>
-<a href="/displayTack?tackName=s4_2"  rel="shadowbox" class="rounded ui image" >
-    <video width="320" height="240" controls>
-        <source src="{{ MEDIA_URL }}small.mp4" poster="VideoLogo.jpg" type="video/mp4">
-        <source src="{{ MEDIA_URL }}small_m.mp4" poster="VideoLogo.jpg" type="video/mp4">
-        <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
-        <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
-        Your browser does not support the video tag.
-    </video>
+{#<a href="/displayTack?tackName=s4_2"  rel="shadowbox" class="rounded ui image" >#}
+
+{#    <video width="320" height="240" controls>#}
+{#        <source src="{{ MEDIA_URL }}small.mp4" poster="VideoLogo.jpg" type="video/mp4">#}
+{#        <source src="{{ MEDIA_URL }}small_m.mp4" poster="VideoLogo.jpg" type="video/mp4">#}
+{#        <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">#}
+{#        <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">#}
+{#        Your browser does not support the video tag.#}
+{#    </video>#}
+<form action="/displayVideoTack" method="post" enctype="multipart/form-data">
+     <label for="file">Image:</label>
+                            <div class="input">
+                                <input type="file" name="file" id="file" required="required" accept="image/*"><br>
+                            </div>
+    <input type="submit"></form>
 </a>
 </body>
 </html>
