--- a/tack/Templates/VideoTest2.html
+++ b/tack/Templates/VideoTest2.html
@@ -4,12 +4,14 @@
     <title></title>
 </head>
 <body>
-<video width="320" height="240" controls>
 
-    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
-    <source src="{{ MEDIA_URL }}small_m.mp4" poster="VideoLogo.jpg" type="video/mp4">
-    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
-        Your browser does not support the video tag.
-    </video>
+{{ p }}
+{#<video width="320" height="240" controls>#}
+{##}
+{#    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">#}
+{#    <source src="{{ MEDIA_URL }}small_m.mp4" poster="VideoLogo.jpg" type="video/mp4">#}
+{#    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">#}
+{#        Your browser does not support the video tag.#}
+{#    </video>#}
 </body>
 </html>
