Updated Favorites Home

--- a/tack/Templates/FavoritesHome.html
+++ b/tack/Templates/FavoritesHome.html
@@ -54,8 +54,8 @@
 <section class="container">
     <div id="wrapper">
     {% if  tacks == "" %}
-        <div class="ui label">There are no tacks in this board!{% endif %}</div>
-    <div class="ui blue label">{{ boardName }}</div>
+        <div class="ui label">You do not have any tacks marked as Favorite yet!{% endif %}</div>
+
 
     <div class = "ui five column grid">
 
