--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -32,7 +32,16 @@
                         <a class="ui right blue corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
                             <i class="star icon"></i>
                         </a>
-                        <img class="ui large image" src="{{ MEDIA_URL }}{{ tack.tackFile }}"  alt='No Image' title={{ tack.Filename }}>
+                        {% if tack.fileType == "image" %}
+                            <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
+                        {% else %}
+                            <video width="200" height="200" controls>
+                                <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
+                                <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
+                                <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        {% endif %}
                     {% else %}
                         <a class="ui right red corner label item" style="text-decoration:none;" href="#" id="confirm_fav">
                             <i class="star icon"></i>
