--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -176,6 +176,16 @@
       method="post" style="display:none"
       action="/ConfirmFav?tackName={{ tack.Filename }}&boardName={{ board.Name }}"
       enctype="multipart/form-data" >
+    {% if tack.isFavorite %}
+        <div>
+            <label> Remove from favorite?</label>
+        </div>
+        <div>
+           <input class="ui button blue" type="submit" id="removeFromFav" value="Remove">
+
+           <a href="#" id="closePopUp">Close</a>
+        </div>
+    {% else %}
     <div>
         <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
     </div>
@@ -185,6 +195,7 @@
 
         <a href="#" id="closePopUp">Close</a>
     </div>
+    {% endif %}
 
 </form>
 
