--- a/tack/Templates/VideoTest2.html
+++ b/tack/Templates/VideoTest2.html
@@ -8,9 +8,9 @@
 {{ p }}
 {#<video width="320" height="240" controls>#}
 {##}
-{#    <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">#}
-{#    <source src="{{ MEDIA_URL }}small_m.mp4" poster="VideoLogo.jpg" type="video/mp4">#}
-{#    <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">#}
+{#    <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/webm">#}
+{#    <source src="{{ MEDIA_URL }}{{tack.tackFile}}" poster="VideoLogo.jpg" type="video/mp4">#}
+{#    <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/ogg">#}
 {#        Your browser does not support the video tag.#}
 {#    </video>#}
 </body>
