--- a/tack/Templates/DisplayTack.html
+++ b/tack/Templates/DisplayTack.html
@@ -36,9 +36,9 @@
                             <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
                         {% else %}
                             <video width="200" height="200" controls>
-                                <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
-                                <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
-                                <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">
+                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/webm">
+                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/ogg">
+                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         {% endif %}
@@ -50,9 +50,9 @@
                             <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
                         {% else %}
                             <video width="200" height="200" controls>
-                                <source src="{{ MEDIA_URL }}small_webm.webm" type="video/webm">
-                                <source src="{{ MEDIA_URL }}small_ogg.ogg" type="video/ogg">
-                                <source src="{{ MEDIA_URL }}small_m.mp4" type="video/mp4">
+                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/webm">
+                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/ogg">
+                                <source src="{{ MEDIA_URL }}{{ tack.tackFile }}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         {% endif %}
@@ -77,8 +77,6 @@
 
     </section>
 </div>
-
-<!-- This is the edit form for editing a tack -->
 
 <style>
     #tackform{
@@ -110,11 +108,7 @@
         width: 400px;
         height: auto;
     }
-
-
-
 </style>
-
 
 <script type="text/javascript">
     $(document).ready(function(){
@@ -181,26 +175,25 @@
             <label> Remove from favorite?</label>
         </div>
         <div>
-           <input class="ui button blue" type="submit" id="removeFromFav" value="Remove">
+            <input class="ui button blue" type="submit" id="removeFromFav" value="Remove">
 
-           <a href="#" id="closePopUp">Close</a>
+            <a href="#" id="closePopUp">Close</a>
         </div>
     {% else %}
-    <div>
-        <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
-    </div>
+        <div>
+            <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
+        </div>
 
-    <div>
-        <input class="ui button blue" type="submit" id="saveAsFav" value="Save">
+        <div>
+            <input class="ui button blue" type="submit" id="saveAsFav" value="Save">
 
-        <a href="#" id="closePopUp">Close</a>
-    </div>
+            <a href="#" id="closePopUp">Close</a>
+        </div>
     {% endif %}
 
 </form>
 
-
-
+<!-- This is the edit form for editing a tack -->
 <form class="ui form segment"
       name="tackform"
       id="tackform"
@@ -234,6 +227,7 @@
         <div class="input">
             <input type="text" name="tags" placeholder="Tags Separated by commas" value="{{ tags }}"></br>
         </div>
+
     </div>
     <div class="field">
         <label>Board: {{ tack.board }} </label>
@@ -252,79 +246,6 @@
     <input class="ui button blue" type="submit" id="submitTack" value="Save!">
     <a href="#" id="close">Close</a>
 </form>
-
-                <form class="ui form segment"
-                      name="confirm_fav_form"
-                      id="confirm_fav_form"
-                      method="post" style="display:none"
-                      action="/ConfirmFav?tackName={{ tack.Filename }}&boardName={{ board.Name }}"
-                      enctype="multipart/form-data" >
-                      <div>
-                      <label> Mark Tack '{{ tack.Filename }}' as Favourite? </label>
-                      </div>
-
-                      <div>
-                      <input class="ui button blue" type="submit" id="saveAsFav" value="Confirm">
-
-                      <a href="#" id="closePopUp">Close</a>
-                      </div>
-
-                </form>
-
-
-
-                <form class="ui form segment"
-                      name="tackform"
-                      id="tackform"
-                      method="post" style="display:none"
-                      action="/editTack"
-                      enctype="multipart/form-data" >
-
-                                    <div class="field">
-                                        <label for="tack_name">Upload new file:</label>
-                                        <div class="ui top center attached blue label">{{ tack.Filename }}</div>
-                                    </div>
-
-                                    <input type="hidden" name="tackName" value="{{ tack.Filename }}">
-
-                                    <div class="field">
-                                        <label for="file">Image:</label>
-                                        <div class="input">
-                                            <input type="file" name="file" id="file" accept="image/*"><br>
-                                        </div>
-                                    </div>
-
-                                        <div class="field">
-                                            <label for="tack_url">URL:</label>
-                                            <div class="input">
-                                                <input type="url" name="tack_url" placeholder="URL to tack" value="{{ tack.bookmark }}"/>
-                                                </br>
-                                            </div>
-                                        </div>
-                                        <div class="field">
-                                            <label for="tags">Tags:</label>
-                                            <div class="input">
-                                                <input type="text" name="tags" placeholder="Tags Separated by commas" value="{{ tags }}"></br>
-                                            </div>
-
-                                        </div>
-                                            <div class="field">
-                                                <label>Board: {{ tack.board }} </label>
-                                                <select name="ex_board">
-                                                     {% for board in boards %}
-                                                             <option name =""
-                                                                     value="{{ board.Name }}"
-
-                                                                     {% if tack.board == board.Name %} selected="selected" {% endif %}>
-                                                              {{ board.Name }}
-                                                             </option>
-                                                     {% endfor %}
-                                                </select>
-                                        </div>
-
-                                    <input class="ui button blue" type="submit" id="submitTack" value="Save!">
-                                    <a href="#" id="close">Close</a>
-                        </form>
 
 <!-- End of editing a tack -->
 
