Added Info page

--- a/tack/Templates/Dashboard.html
+++ b/tack/Templates/Dashboard.html
@@ -102,6 +102,11 @@
                 <i class="search icon"></i> Search
             </a>
         </div>
+        <div class="item">
+            <a class="item" href="/displayInfoScreen">
+                <i class="info icon"></i> About
+            </a>
+        </div>
     </div>
 </div>
 <a href="/videoTest">click to test video</a>
