--- a/tack/Templates/DisplaySearchBoard.html
+++ b/tack/Templates/DisplaySearchBoard.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div class="ui inverted tiered menu">
-        <div class="left menu">
+    <div class="left menu">
         <div class="item">
             <img src="/static/images/tackshare.png" alt="TackShare"  width="300" height="50">
         </div>
@@ -53,32 +53,44 @@
 </div>
 <section class="container">
     <div id="wrapper">
-    {% if  tacks == "" %}
-        <div class="ui label">There are no tacks in this board!{% endif %}</div>
-    <div class="ui blue label">{{ boardName }}</div>
-    
-    <div class = "ui five column grid">
+        {% if  tacks == "" %}
+            <div class="ui label">There are no tacks in this board!{% endif %}</div>
+        <div class="ui blue label">{{ boardName }}</div>
 
-
-        {% for tack in tacks %}
+        <div class = "ui five column grid">
             <div class="column">
-                <div class="ui segment">
-                    <a href="/displayTack?tackName={{ tack.Filename }}"  rel="shadowbox" class="rounded ui image" title={{ tack.Filename }}>
-                        {% if tack.fileType == "image" %}
-                            <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
-                        {% else %}
-                            <video width="200" height="200" controls>
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/webm">
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/ogg">
-                                <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        {% endif %}
-                    </a>
+                <div class="ui stacked segment">
+                    <div class="ui stacked segment">
+                        <a id="board_ref" href="/createTackInBoard?boardName={{ boardName }}" style="text-decoration: none" >
+                            <div class="image">
+                                <i class="massive black add sign icon"></i>
+                                <div class="ui label">Create New Tack!</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
-        {% endfor %}
-    </div>
+
+            {% for tack in tacks %}
+                <div class="column">
+                    <div class="ui stacked segment">
+                        <div class="ui stacked segment">
+                            <a href="/displayTack?tackName={{ tack.Filename }}"  rel="shadowbox" class="rounded ui image" title={{ tack.Filename }}>
+                                {% if tack.fileType == "image" %}
+                                    <img src="{{ MEDIA_URL }}{{ tack.tackFile }}" alt='No Image' width="200" height="200" title={{ tack.Filename }}/>
+                                {% else %}
+                                    <video width="200" height="200" controls>
+                                        <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/webm">
+                                        <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/ogg">
+                                        <source src="{{ MEDIA_URL }}{{tack.tackFile}}" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                {% endif %}
+                            </a>
+                        </div></div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 </section>
 </body>
